--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "npm-check-updates": "3.0.0-alpha2",
     "npm-package-json-lint": "3.4.1",
     "npm-run-all": "4.1.3",
-    "nsp": "3.2.1",
     "remark-cli": "6.0.0",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
@@ -65,7 +64,9 @@
   "private": true,
   "repository": "https://github.com/psirenny/monorepo",
   "scripts": {
-    "audit:self": "nsp check",
+    "audit": "npm-run-all audit:self audit:pkgs",
+    "audit:pkgs": "lerna run audit",
+    "audit:self": "yarn audit",
     "build": "npm-run-all build:pkgs",
     "build:pkgs": "lerna run build",
     "check": "npm-run-all check:self check:pkgs",
