--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -23,7 +23,6 @@
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-package-json-lint": "3.4.1",
     "npm-run-all": "4.1.3",
-    "nsp": "3.2.1",
     "remark-cli": "6.0.0",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
@@ -102,7 +101,7 @@
     "url": "https://github.com/psirenny/monorepo/tree/master/packages/babel-preset"
   },
   "scripts": {
-    "audit": "nsp check",
+    "audit": "yarn audit",
     "check": "run-s audit lint",
     "clean": "trash **.DS_Store *.log node_modules",
     "lint": "run-s lint:js lint:md lint:pkg",
