--- a/packages/remark-preset/package.json
+++ b/packages/remark-preset/package.json
@@ -52,7 +52,6 @@
     "npm-check-updates": "3.0.0-alpha.3",
     "npm-package-json-lint": "3.4.1",
     "npm-run-all": "4.1.3",
-    "nsp": "3.2.1",
     "remark-cli": "6.0.0",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
@@ -130,7 +129,7 @@
     "url": "https://github.com/psirenny/monorepo/tree/master/packages/remark-preset"
   },
   "scripts": {
-    "audit": "nsp check",
+    "audit": "yarn audit",
     "build": "rollup -c ../rollup-config_node_tool/src/index.js src/index.js",
     "check": "run-s audit lint typecheck typecheck:cov",
     "clean": "trash **.DS_Store *.log dist dist node_modules",
