--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/config-lerna-scopes": "7.2.1",
-    "circleci-bin": "1.1.0",
-    "flow-mono-cli": "1.4.2",
-    "greenkeeper-lockfile": "2.7.1",
-    "husky": "1.1.2",
-    "lerna": "3.4.3",
-    "npm-check-updates": "3.0.0-alpha2",
+    "circleci-bin": "1.1.2",
+    "flow-mono-cli": "1.4.3",
+    "greenkeeper-lockfile": "2.8.0",
+    "husky": "1.2.0",
+    "lerna": "3.5.1",
     "npm-package-json-lint": "3.4.1",
-    "npm-run-all": "4.1.3",
-    "remark-cli": "6.0.0",
+    "npm-run-all": "4.1.5",
+    "remark-cli": "6.0.1",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
     "remark-lint-code-block-style": "1.0.2",
@@ -32,34 +31,31 @@
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
-    "remark-retext": "3.1.1",
+    "remark-retext": "3.1.2",
     "retext-assuming": "1.0.0",
-    "retext-contractions": "2.1.2",
-    "retext-diacritics": "1.2.1",
-    "retext-english": "3.0.0",
-    "retext-equality": "3.4.1",
-    "retext-indefinite-article": "1.1.4",
-    "retext-intensify": "3.0.1",
-    "retext-passive": "1.3.0",
-    "retext-profanities": "4.4.0",
-    "retext-quotes": "2.0.1",
-    "retext-readability": "4.2.0",
-    "retext-redundant-acronyms": "1.2.1",
-    "retext-repeated-words": "1.2.1",
-    "retext-sentence-spacing": "2.0.1",
-    "retext-simplify": "4.1.1",
-    "retext-spell": "2.3.1",
-    "retext-syntax-mentions": "1.1.4",
-    "retext-syntax-urls": "1.0.0",
+    "retext-contractions": "2.1.3",
+    "retext-diacritics": "1.2.2",
+    "retext-english": "3.0.2",
+    "retext-equality": "3.6.0",
+    "retext-indefinite-article": "1.1.5",
+    "retext-intensify": "3.0.2",
+    "retext-passive": "1.3.2",
+    "retext-profanities": "4.5.0",
+    "retext-quotes": "2.0.3",
+    "retext-readability": "4.2.1",
+    "retext-redundant-acronyms": "1.2.2",
+    "retext-repeated-words": "1.2.2",
+    "retext-sentence-spacing": "2.0.3",
+    "retext-simplify": "4.1.2",
+    "retext-spell": "2.4.0",
+    "retext-syntax-mentions": "1.1.5",
+    "retext-syntax-urls": "1.0.1",
     "trash-cli": "1.4.0",
-    "unified": "7.0.0"
+    "unified": "7.0.2",
+    "updates": "5.4.3"
   },
   "homepage": "https://github.com/psirenny/monorepo",
-  "keywords": [
-    "mono",
-    "psirenny",
-    "repo"
-  ],
+  "keywords": ["monorepo", "psirenny"],
   "license": "Unlicense",
   "private": true,
   "repository": "https://github.com/psirenny/monorepo",
@@ -84,14 +80,14 @@
     "lint:self": "run-s lint:md:self lint:pkg:self",
     "lint:md:self": "remark --frail .",
     "lint:pkg:self": "npmPkgJsonLint ./package.json",
-    "outdated": "run-s outdated:self outdated:pkgs",
+    "outdated": "run-s outdated:pkgs outdated:self",
     "outdated:pkgs": "lerna run outdated",
-    "outdated:self": "ncu -t",
+    "outdated:self": "updates -gp",
     "publish": "lerna publish",
     "release": "lerna version",
     "update": "run-s update:self update:pkgs",
     "update:pkgs": "lerna run update",
-    "update:self": "ncu -tu"
+    "update:self": "updates -gpu"
   },
   "workspaces": [
     "packages/*"
