--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -8,22 +8,21 @@
   },
   "devDependencies": {
     "dictionary-en-us": "2.0.0",
-    "eslint": "5.8.0",
+    "eslint": "5.9.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-array-func": "3.0.0",
+    "eslint-plugin-array-func": "3.1.0",
     "eslint-plugin-ava": "5.1.1",
-    "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-eslint-comments": "3.0.1",
     "eslint-plugin-eslint-plugin": "1.4.1",
-    "eslint-plugin-flowtype": "3.1.4",
+    "eslint-plugin-flowtype": "3.2.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-markdown": "1.0.0-rc.0",
+    "eslint-plugin-markdown": "1.0.0-rc.1",
     "eslint-plugin-tree-shaking": "1.7.3",
-    "npm-check-updates": "3.0.0-alpha.3",
     "npm-package-json-lint": "3.4.1",
-    "npm-run-all": "4.1.3",
-    "remark-cli": "6.0.0",
+    "npm-run-all": "4.1.5",
+    "remark-cli": "6.0.1",
     "remark-lint-blockquote-indentation": "1.0.2",
     "remark-lint-checkbox-character-style": "1.0.2",
     "remark-lint-code-block-style": "1.0.2",
@@ -37,36 +36,37 @@
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
-    "remark-retext": "3.1.1",
+    "remark-retext": "3.1.2",
     "retext-assuming": "1.0.0",
-    "retext-contractions": "2.1.2",
-    "retext-diacritics": "1.2.1",
-    "retext-english": "3.0.0",
-    "retext-equality": "3.4.1",
-    "retext-indefinite-article": "1.1.4",
-    "retext-intensify": "3.0.1",
-    "retext-passive": "1.3.0",
-    "retext-profanities": "4.4.0",
-    "retext-quotes": "2.0.1",
-    "retext-readability": "4.2.0",
-    "retext-redundant-acronyms": "1.2.1",
-    "retext-repeated-words": "1.2.1",
-    "retext-sentence-spacing": "2.0.1",
-    "retext-simplify": "4.1.1",
-    "retext-spell": "2.3.1",
-    "retext-syntax-mentions": "1.1.4",
-    "retext-syntax-urls": "1.0.0",
+    "retext-contractions": "2.1.3",
+    "retext-diacritics": "1.2.2",
+    "retext-english": "3.0.2",
+    "retext-equality": "3.6.0",
+    "retext-indefinite-article": "1.1.5",
+    "retext-intensify": "3.0.2",
+    "retext-passive": "1.3.2",
+    "retext-profanities": "4.5.0",
+    "retext-quotes": "2.0.3",
+    "retext-readability": "4.2.1",
+    "retext-redundant-acronyms": "1.2.2",
+    "retext-repeated-words": "1.2.2",
+    "retext-sentence-spacing": "2.0.3",
+    "retext-simplify": "4.1.2",
+    "retext-spell": "2.4.0",
+    "retext-syntax-mentions": "1.1.5",
+    "retext-syntax-urls": "1.0.1",
     "trash-cli": "1.4.0",
-    "unified": "7.0.0"
+    "unified": "7.0.2",
+    "updates": "5.4.3"
   },
   "peerDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.1.0",
     "@babel/plugin-proposal-json-strings": "^7.0.0",
     "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
@@ -79,9 +79,9 @@
     "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-plugin-preval": "^3.0.0"
+    "@babel/plugin-transform-flow-strip-types": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-plugin-preval": "^3.0.1"
   },
   "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
   "homepage": "https://github.com/psirenny/monorepo/tree/master/packages/babel-preset",
@@ -108,8 +108,8 @@
     "lint:js": "eslint . --ext .js,.md",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "lint:md": "remark --frail .",
-    "outdated": "ncu -t",
-    "update": "ncu -tu"
+    "outdated": "updates -gp",
+    "update": "updates -gpu"
   },
   "sideEffects": false
 }
