--- a/packages/npm-package-json-lint-config/package.json
+++ b/packages/npm-package-json-lint-config/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@psirenny/npm-package-json-lint-config",
   "version": "1.2.2",
-  "description": "psirenny's eslint config",
+  "description": "psirenny's npm package json lint config",
   "author": "Dennis Torres <djtorres0@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/psirenny/monorepo/issues"
-  },
+  "bugs": "https://github.com/psirenny/monorepo/issues",
   "devDependencies": {
     "@babel/core": "7.2.0",
     "@babel/plugin-external-helpers": "7.2.0",
@@ -45,7 +43,6 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-rc.1",
-    "eslint-plugin-tree-shaking": "1.7.3",
     "flow-bin": "0.87.0",
     "flow-coverage-report": "0.6.0",
     "npm-package-json-lint": "3.4.1",
