--- a/packages/npm-package-json-lint-config/package.json
+++ b/packages/npm-package-json-lint-config/package.json
@@ -5,10 +5,10 @@
   "author": "Dennis Torres <djtorres0@gmail.com>",
   "bugs": "https://github.com/psirenny/monorepo/issues",
   "devDependencies": {
-    "@babel/core": "7.2.0",
+    "@babel/core": "7.2.2",
     "@babel/plugin-external-helpers": "7.2.0",
     "@babel/plugin-proposal-class-properties": "7.2.1",
-    "@babel/plugin-proposal-decorators": "7.2.0",
+    "@babel/plugin-proposal-decorators": "7.2.2",
     "@babel/plugin-proposal-do-expressions": "7.2.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
@@ -43,8 +43,8 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-rc.1",
-    "flow-bin": "0.87.0",
-    "flow-coverage-report": "0.6.0",
+    "flow-bin": "0.89.0",
+    "flow-coverage-report": "0.6.1",
     "npm-package-json-lint": "3.4.1",
     "npm-run-all": "4.1.5",
     "remark-cli": "6.0.1",
@@ -66,7 +66,7 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.6.0",
+    "retext-equality": "3.7.0",
     "retext-indefinite-article": "1.1.5",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
@@ -80,11 +80,11 @@
     "retext-spell": "2.4.0",
     "retext-syntax-mentions": "1.1.5",
     "retext-syntax-urls": "1.0.1",
-    "rollup": "0.67.4",
-    "rollup-plugin-babel": "4.1.0-0",
+    "rollup": "0.68.0",
+    "rollup-plugin-babel": "4.1.0",
     "rollup-plugin-flow-entry": "0.2.0",
     "trash-cli": "1.4.0",
-    "unified": "7.0.2",
+    "unified": "7.1.0",
     "updates": "5.4.3"
   },
   "peerDependencies": {
