--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,8 +7,8 @@
   "devDependencies": {
     "@babel/core": "7.2.2",
     "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.2.1",
-    "@babel/plugin-proposal-decorators": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-decorators": "7.2.3",
     "@babel/plugin-proposal-do-expressions": "7.2.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
@@ -26,13 +26,13 @@
     "@babel/plugin-proposal-unicode-property-regex": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-syntax-import-meta": "7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "7.2.0",
-    "@babel/preset-env": "7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "7.2.3",
+    "@babel/preset-env": "7.2.3",
     "@babel/preset-flow": "7.0.0",
     "babel-eslint": "10.0.1",
     "babel-plugin-preval": "3.0.1",
     "dictionary-en-us": "2.0.0",
-    "eslint": "5.10.0",
+    "eslint": "5.12.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-array-func": "3.0.0",
     "eslint-plugin-ava": "5.1.1",
@@ -44,7 +44,7 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-markdown": "1.0.0-rc.0",
     "eslint-plugin-optimize-regex": "1.1.6",
-    "flow-bin": "0.89.0",
+    "flow-bin": "0.91.0",
     "flow-coverage-report": "0.6.1",
     "npm-package-json-lint": "3.4.1",
     "npm-run-all": "4.1.5",
@@ -55,10 +55,10 @@
     "remark-lint-emphasis-marker": "1.0.2",
     "remark-lint-fenced-code-marker": "1.0.2",
     "remark-lint-heading-style": "1.0.2",
-    "remark-lint-link-title-style": "1.0.2",
+    "remark-lint-link-title-style": "1.0.3",
     "remark-lint-rule-style": "1.0.2",
     "remark-lint-strong-marker": "1.0.2",
-    "remark-lint-table-cell-padding": "1.0.2",
+    "remark-lint-table-cell-padding": "1.0.3",
     "remark-preset-lint-consistent": "2.0.2",
     "remark-preset-lint-markdown-style-guide": "2.1.2",
     "remark-preset-lint-recommended": "3.0.2",
@@ -67,7 +67,7 @@
     "retext-contractions": "2.1.3",
     "retext-diacritics": "1.2.2",
     "retext-english": "3.0.2",
-    "retext-equality": "3.7.0",
+    "retext-equality": "3.8.0",
     "retext-indefinite-article": "1.1.5",
     "retext-intensify": "3.0.2",
     "retext-passive": "1.3.2",
@@ -76,28 +76,28 @@
     "retext-readability": "4.2.1",
     "retext-redundant-acronyms": "1.2.2",
     "retext-repeated-words": "1.2.2",
-    "retext-sentence-spacing": "2.0.3",
+    "retext-sentence-spacing": "2.1.0",
     "retext-simplify": "4.1.2",
     "retext-spell": "2.4.0",
     "retext-syntax-mentions": "1.1.5",
     "retext-syntax-urls": "1.0.1",
-    "rollup": "0.68.0",
-    "rollup-plugin-babel": "4.1.0",
+    "rollup": "1.1.0",
+    "rollup-plugin-babel": "5.0.0-alpha.0",
     "rollup-plugin-flow-entry": "0.2.0",
     "trash-cli": "1.4.0",
     "unified": "7.1.0",
-    "updates": "5.4.3"
+    "updates": "6.0.3"
   },
   "peerDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-array-func": "^3.1.0",
+    "eslint-plugin-array-func": "^3.1.2",
     "eslint-plugin-ava": "^5.1.1",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-eslint-comments": "^3.0.1",
-    "eslint-plugin-eslint-plugin": "^2.0.0",
-    "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-markdown": "^1.0.0-rc.1",
+    "eslint-plugin-eslint-plugin": "^2.0.1",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-markdown": "^1.0.0",
     "eslint-plugin-optimize-regex": "^1.1.6"
   },
   "gitHead": "11b63ee7b482365e4b52ca837a5dc6e63adf197b",
@@ -122,7 +122,7 @@
   },
   "scripts": {
     "audit": "yarn audit",
-    "build": "rollup -c ../rollup-config_node_tool/src/index.js src/index.js",
+    "build": "rollup -c",
     "check": "run-s audit lint typecheck typecheck:cov",
     "clean": "trash **.DS_Store *.log dist node_modules",
     "lint": "run-s lint:js lint:md lint:pkg",
