--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "lint:md": "remark --frail .",
     "lint:pkg": "npmPkgJsonLint ./package.json",
     "outdated": "yarn outdated",
+    "postinstall": "run-s install:pkgs",
     "prepublish": "run-s build",
     "publish": "lerna publish",
     "release": "lerna version",
